Child bone head disappears if connected parent bone is hidden #75820

Closed
opened 2020-04-17 11:02:54 +02:00 by Wayne Dixon · 4 comments

System Information
Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-16 01:05, hash: 1685f5824d
Worked: 2.79

Short description of error
If the parent of a connect bone his hidden (in pose mode or edit mode), the head of the child bone is also hidden.
I'm not sure if this is intentional behaviour, however, it didn't happen in 2.79 and earlier but this is how it behave been since 2.80.
A bone without a head looks very odd indeed haha.

Exact steps for others to reproduce the error
See attached video

  • Add a bone chain of at least 2
  • Make sure they are connected children
  • Hide the parent in Edit Mode or Pose Mode
  • The head of the child bone (the bone not hidden) is missing too

bone_head_disappear.mp4

**System Information** Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109 **Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-16 01:05, hash: `1685f5824d` Worked: 2.79 **Short description of error** If the parent of a connect bone his hidden (in pose mode or edit mode), the head of the child bone is also hidden. I'm not sure if this is intentional behaviour, however, it didn't happen in 2.79 and earlier but this is how it behave been since 2.80. A bone without a head looks very odd indeed haha. **Exact steps for others to reproduce the error** See attached video - Add a bone chain of at least 2 - Make sure they are connected children - Hide the parent in Edit Mode or Pose Mode - The head of the child bone (the bone not hidden) is missing too [bone_head_disappear.mp4](https://archive.blender.org/developer/F8478322/bone_head_disappear.mp4)
Author

Added subscriber: @WayneDixon

Added subscriber: @WayneDixon

This issue was referenced by adc6659de5

This issue was referenced by adc6659de5d90bbed360e243e4c0a8b65a6754eb

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-04-17 12:30:15 +02:00
Author

You the man, Campbell!

Nice one.

You the man, Campbell! Nice one.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75820
No description provided.