Fix T75820: Child bone head vanishes when connected parent is hidden